# dremu_chart_creator

./: .eslintrc.js  .gitignore  README.md  babel.config.js.disable  electron-builder.yml  jest.config.js  next.config.js  next.config.mjs  nextron.config.js  package.json  tailwind.config.js  tsconfig.json  upgrade-version.js  规范.md
.tauri/: updater.key  updater.key.pub
__test__/: bpm.test.ts  recent-chart.test.ts.dis
app/: background.js.map  main.js  main.js.map  main.ts  tsconfig.json
app/config/: devmode.js  devmode.js.map  devmode.ts  window.js  window.js.map  window.ts
app/manager/: window.d.ts  window.js  window.js.map  window.ts
components/: input.tsx
components/button/: button.d.ts
components/header-menu/: header-menu.module.scss  header-menu.tsx
components/switch/: switch.module.scss
docs/: 使用文档-v0.1.2.md
interfaces/: config.d.ts
interfaces/chart-data/: chart-data.d.ts
pages/: _document.tsx  preview.tsx
renderer/: next.config.js  tsconfig.json
renderer/interfaces/: global-type.d.ts
renderer/pages/: _document.tsx  index.tsx  preview.tsx
renderer/scripts/: config.ts
scripts/: config.ts
scripts/chart-data/: chart-data.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/local-language/: zh-CN.xml
src-tauri/src/: main.rs
src/context/: app.ts  (+1 more)
styles/: Preview.module.scss
trash/: preview-delete.tsx
update-log/: v0.1.1.md  v0.1.10.md  v0.1.11.md  v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.1.7.md  v0.1.8.md  v0.1.9.md  v0.2.0.md  v0.2.1.md  v0.2.2.md  v0.2.3.md  v0.2.4.md
(+350 files in other folders)
